--- a/docs/hipchat.org
+++ b/docs/hipchat.org
@@ -11,7 +11,7 @@
 hipchat はブラウザや専用クライアントを使って利用するのが一般的ですが、
 emacs フリークであれば hipchat も emacs でやりたくなるのが信条というものでしょう。
 
-*忙しい人はこのセクションを飛して、[[#summay][「まとめ」]]に進んでください。*
+*忙しい人はこのセクションを飛して、[[#summary][「まとめ」]]に進んでください。*
 
 * hipchat
 
