--- a/readme.org
+++ b/readme.org
@@ -11,6 +11,7 @@ This is emacs lisp for hipchat with emacs.
 -  emacs jabber 
    - ver 0.8.92
    - http://emacs-jabber.sourceforge.net/
+- curl     
 - autosmiley (optional)
 
 * setting
