--- a/docs/hipchat.org
+++ b/docs/hipchat.org
@@ -4,12 +4,14 @@
 #+EMAIL: 
 #+OPTIONS: ^:{}
 
-* はじめに
-
 これは、emacs を hipchat クライアント化するための設定方法の説明ドキュメントです。
 
 hipchat はブラウザや専用クライアントを使って利用するのが一般的ですが、
 emacs フリークであれば hipchat も emacs でやりたくなるのが信条というものでしょう。
+
+ただ、jabber のオーバーヘッドが大きいのか、
+メンバーの presence が変ったりすと emacs の反応が鈍くなります。
+メンバーが多い場合は hipchat 用に別プロセスの emacs を立ち上げた方が無難です。
 
 *忙しい人はこのセクションを飛して、[[#summary][「まとめ」]]に進んでください。*
 
